--- a/docs/overview/resources/dem.tex
+++ b/docs/overview/resources/dem.tex
@@ -6,55 +6,55 @@
   \pgfsetstrokecolor{black}
   \definecolor{strokecol}{rgb}{0.0,0.0,0.0}
   \pgfsetstrokecolor{strokecol}
-  \draw (-0.26bp,0.14bp) -- (-0.26bp,165.14bp) -- (402.74bp,165.14bp) -- (402.74bp,0.14bp) -- cycle;
-  \draw (201.24bp,145.64bp) node {\Large Demographic data};
+  \draw (0.24bp,0.14bp) -- (0.24bp,165.14bp) -- (414.24bp,165.14bp) -- (414.24bp,0.14bp) -- cycle;
+  \draw (207.24bp,145.64bp) node {\Large Demographic data};
 \end{scope}
   \pgfsetcolor{black}
   % Edge: unknownDeath -> unusuYoung
-  \draw [->] (323.74bp,79.801bp) .. controls (323.74bp,71.208bp) and (323.74bp,63.0bp)  .. (323.74bp,63.0bp) .. controls (323.74bp,63.0bp) and (171.74bp,63.0bp)  .. (171.74bp,63.0bp) .. controls (171.74bp,63.0bp) and (171.74bp,56.33bp)  .. (171.74bp,46.33bp);
+  \draw [->] (318.74bp,79.801bp) .. controls (318.74bp,71.208bp) and (318.74bp,63.0bp)  .. (318.74bp,63.0bp) .. controls (318.74bp,63.0bp) and (172.24bp,63.0bp)  .. (172.24bp,63.0bp) .. controls (172.24bp,63.0bp) and (172.24bp,56.33bp)  .. (172.24bp,46.33bp);
   % Edge: unusuYoung -> removeImmortals
-  \draw [->] (196.58bp,27.0bp) .. controls (196.58bp,27.0bp) and (197.43bp,27.0bp)  .. (205.11bp,27.0bp);
+  \draw [->] (197.08bp,27.0bp) .. controls (197.08bp,27.0bp) and (197.93bp,27.0bp)  .. (205.61bp,27.0bp);
   % Edge: dem -> admin
-  \draw [->] (111.32bp,99.0bp) .. controls (111.32bp,99.0bp) and (137.15bp,99.0bp)  .. (147.15bp,99.0bp);
+  \draw [->] (111.82bp,99.0bp) .. controls (111.82bp,99.0bp) and (137.65bp,99.0bp)  .. (147.65bp,99.0bp);
   % Edge: admin -> unknownDeath
-  \draw [->] (260.65bp,99.0bp) .. controls (260.65bp,99.0bp) and (290.97bp,99.0bp)  .. (300.97bp,99.0bp);
+  \draw [->] (261.15bp,99.0bp) .. controls (261.15bp,99.0bp) and (280.32bp,99.0bp)  .. (290.32bp,99.0bp);
   % Node: admin
 \begin{scope}
   \definecolor{strokecol}{rgb}{0.0,0.0,0.0}
   \pgfsetstrokecolor{strokecol}
-  \draw (260.24bp,118.14bp) -- (147.24bp,118.14bp) -- (147.24bp,80.14bp) -- (260.24bp,80.14bp) -- cycle;
-  \draw (203.74bp,99.141bp) node {\begin{tabular}{c}
+  \draw (260.74bp,118.14bp) -- (147.74bp,118.14bp) -- (147.74bp,80.14bp) -- (260.74bp,80.14bp) -- cycle;
+  \draw (204.24bp,99.141bp) node {\begin{tabular}{c}
 							Trade year of hire \\							for 30 pairs \end{tabular}};
 \end{scope}
   % Node: unusuYoung
 \begin{scope}
   \definecolor{strokecol}{rgb}{0.0,0.0,0.0}
   \pgfsetstrokecolor{strokecol}
-  \draw (196.24bp,46.14bp) -- (67.24bp,46.14bp) -- (67.24bp,8.14bp) -- (196.24bp,8.14bp) -- cycle;
-  \draw (131.74bp,27.141bp) node {\begin{tabular}{c}
+  \draw (196.74bp,46.14bp) -- (67.74bp,46.14bp) -- (67.74bp,8.14bp) -- (196.74bp,8.14bp) -- cycle;
+  \draw (132.24bp,27.141bp) node {\begin{tabular}{c}
 							Make studyno 118137 \\							5 years older \end{tabular}};
 \end{scope}
   % Node: unknownDeath
 \begin{scope}
   \definecolor{strokecol}{rgb}{0.0,0.0,0.0}
   \pgfsetstrokecolor{strokecol}
-  \draw (394.24bp,118.14bp) -- (301.24bp,118.14bp) -- (301.24bp,80.14bp) -- (394.24bp,80.14bp) -- cycle;
-  \draw (347.74bp,99.141bp) node {\begin{tabular}{c}
-							10 dead with \\							unknown yod \end{tabular}};
+  \draw (405.74bp,118.14bp) -- (290.74bp,118.14bp) -- (290.74bp,80.14bp) -- (405.74bp,80.14bp) -- cycle;
+  \draw (348.24bp,99.141bp) node {\begin{tabular}{c}
+							Remove 10 dead \\							with unknown \texttt{yod} \end{tabular}};
 \end{scope}
   % Node: dem
 \begin{scope}
   \definecolor{strokecol}{rgb}{0.0,0.0,0.0}
   \pgfsetstrokecolor{strokecol}
-  \draw (111.24bp,117.14bp) -- (8.24bp,117.14bp) -- (8.24bp,81.14bp) -- (111.24bp,81.14bp) -- cycle;
-  \draw (59.738bp,99.141bp) node {\texttt{auto\_vs\_15.rdata}};
+  \draw (111.74bp,117.14bp) -- (8.74bp,117.14bp) -- (8.74bp,81.14bp) -- (111.74bp,81.14bp) -- cycle;
+  \draw (60.238bp,99.141bp) node {\texttt{auto\_vs\_15.rdata}};
 \end{scope}
   % Node: removeImmortals
 \begin{scope}
   \definecolor{strokecol}{rgb}{0.0,0.0,0.0}
   \pgfsetstrokecolor{strokecol}
-  \draw (346.24bp,46.14bp) -- (205.24bp,46.14bp) -- (205.24bp,8.14bp) -- (346.24bp,8.14bp) -- cycle;
-  \draw (275.74bp,27.141bp) node {\begin{tabular}{c}
+  \draw (346.74bp,46.14bp) -- (205.74bp,46.14bp) -- (205.74bp,8.14bp) -- (346.74bp,8.14bp) -- cycle;
+  \draw (276.24bp,27.141bp) node {\begin{tabular}{c}
 							Remove 134 people \\							worked less than 3 years \end{tabular}};
 \end{scope}
 %
